# pyadvent2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
solutions/day01/: solution.py
solutions/day02/: solution.py
solutions/day03/: solution.py
solutions/day04/: solution.py
solutions/day05/: solution.py
solutions/day06/: solution.py
solutions/day07/: solution.py
solutions/day08/: solution.py
solutions/day09/: solution.py
solutions/day10/: solution.py
solutions/day11/: solution.py
solutions/day12/: solution.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py
